--- a/modules/examples/pom.xml
+++ b/modules/examples/pom.xml
@@ -26,6 +26,7 @@
     </dependencies>
         
     <build>
+        <defaultGoal>clean install exec:java</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
