--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
+                <artifactId>it-tidalwave-thesefoolishthings-examples-dci-marshal-xstream</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-asexample2</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
