--- a/modules/examples/pom.xml
+++ b/modules/examples/pom.xml
@@ -41,7 +41,7 @@
     <modules>
         <module>DciDisplayableExample</module>
         <module>DciMarshalXStreamExample</module>
-        <!-- module>AsExample2</module -->
+        <module>DciPersistenceJpaExample</module>
         <module>Data</module>
         <module>FinderExample1</module>
         <module>FinderExample2</module>
