--- a/modules/examples/FinderExample1/pom.xml
+++ b/modules/examples/FinderExample1/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>it-tidalwave-util</artifactId>
         </dependency>
         <dependency>
+            <groupId>it.tidalwave.thesefoolishthings</groupId>
+            <artifactId>it-tidalwave-thesefoolishthings-examples-data</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
         </dependency>
