--- a/modules/examples/pom.xml
+++ b/modules/examples/pom.xml
@@ -39,10 +39,11 @@
     </build>
 
     <modules>
+        <module>Data</module>
         <module>DciDisplayableExample</module>
         <module>DciMarshalXStreamExample</module>
         <module>DciPersistenceJpaExample</module>
-        <module>Data</module>
+        <module>DciSwingExample</module>
         <module>FinderExample1</module>
         <module>FinderExample2</module>
         <module>FinderExample3</module>
