--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,11 @@
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
+                <artifactId>it-tidalwave-thesefoolishthings-examples-dci-swing</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample1</artifactId>
                 <version>1.0.19-SNAPSHOT</version>
             </dependency>
