--- a/.hgignore
+++ b/.hgignore
@@ -1,10 +1,11 @@
 target
-.repository
-.description
-.classpath
-.project
-.settings
-release.properties
+\.repository
+\.description
+\.classpath
+\.project
+\.settings
+release\.properties
+\.externalToolBuilders
 \.orig\..*$
 \.orig$
 \.chg\..*$
