--- a/archetypes/project/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/project/src/main/resources/archetype-resources/pom.xml
@@ -46,54 +46,92 @@
     <name>${projectName} (master)</name>
     <inceptionYear>2013</inceptionYear>
 
+    <!--
+        TODO: review settings after the generation of the archetype and delete unwanted stuff. Delete this comment too.
+        Some sections are alternate settings for different corporates / forge. Just keep the one you need and eventually
+        add more.
+    -->
     <properties>
-        <tft.project.url>http://${rootArtifactId}.${forgeName}</tft.project.url>
-        <tft.project.description>TODO: project description</tft.project.description>
+        <!-- Java.net
+        <tft.project.url>http://${projectName.toLowerCase()}.${forgeName}</tft.project.url>
+        -->
+        
+        <!-- BitBucket.org 
+        <tft.project.url>http://bitbucket.org/${organizationName.toLowerCase()}/${rootArtifactId}</tft.project.url>
+        -->
+        
+        <!-- Tidalwave 
+        <tft.project.url>http://${projectName.toLowerCase()}.tidalwave.it</tft.project.url>-->
+        
+        <!--<tft.project.description>TODO: project description</tft.project.description>-->
 
-        <scm.repo.url>https://${forgeName}/hg/${rootArtifactId}~src</scm.repo.url>
+        <!-- Java.Net Mercurial setting 
+        <scm.repo.url>https://${forgeName.toLowerCase()}/hg/${rootArtifactId}~src</scm.repo.url>
         <scm.repo.readonly.url>http://${forgeName}/hg/${rootArtifactId}~src</scm.repo.readonly.url>
         <scm.repo.browse.url>http://${forgeName}/projects/${rootArtifactId}/sources/src/show</scm.repo.browse.url>
+        -->
+        
+        <!-- BitBucket.org Mercurial setting  
+        <scm.repo.url>ssh//hg@bitbucket.org/${organizationName.toLowerCase()}/${rootArtifactId}-src</scm.repo.url>
+        <scm.repo.readonly.url>http://bitbucket.org/${organizationName.toLowerCase()}/${rootArtifactId}-src</scm.repo.readonly.url>
+        <scm.repo.browse.url>http://bitbucket.org/${organizationName.toLowerCase()}/${rootArtifactId}/src</scm.repo.browse.url>
+        -->
 
         <tft.maven.requiredJdk>[1.7.0,)</tft.maven.requiredJdk>
         <tft.javac.source>1.7</tft.javac.source>
         <tft.javac.target>1.7</tft.javac.target>
-<!-- E.g. for Android
+        
+        <!-- E.g. for Android
         <tft.javac.source>1.5</tft.javac.source>
         <tft.javac.target>1.5</tft.javac.target>
--->
+        -->
                 
-<!--
+        <!--
         <tft.test.maxMemory>1024M</tft.test.maxMemory>
         <tft.test.listeners>it.tidalwave.util.test.TestLogger</tft.test.listeners>
+        -->
 
+        <!--
         <tft.UmlGraphDoc.version>5.4</tft.UmlGraphDoc.version>
         <tft.UmlGraphDoc.additionalParam>-views -attributes -operations -types -postfixpackage -nodefontpackagesize 6 -nodefontclasssize 8 -nodefontsize 7 -edgefontsize 7 -nodesep 0.05 -ranksep 0.1 -visibility -inferdep -inferrel -inferdepinpackage -hide java.*|javax.*|android.*</tft.UmlGraphDoc.additionalParam>
--->
-
+        -->
     </properties>
 
     <issueManagement>
+        <!-- Java.Net with Jira
         <system>Jira</system>
-        <url>http://${forgeName}/jira/browse/${rootArtifactId}</url>
+        <url>http://${forgeName}/jira/browse/${projectName.toLowerCase()}</url>-->
+        
+        <!-- Tidalwave 
+        <url>https://services.tidalwave.it/jira/browse/PROJECT-CODE</url> -->
     </issueManagement>
 
+    <!--
+    <ciManagement>
+        <system>hudson</system>
+        <url>TODO</url>
+    </ciManagement>
+    -->
+
+    <!-- Java.Net
     <distributionManagement>
         <site>
             <id>website-${rootArtifactId}.${forgeName}</id>
             <url>dav:https://${forgeName}/website/${rootArtifactId}/site/</url>
         </site>
     </distributionManagement>
+    -->
 
     <mailingLists>
         <mailingList>
             <name>Continuous Integration</name>
             <post>ci@${rootArtifactId}.${forgeName}</post>
-            <archive>http://${forgeName}/projects/${rootArtifactId}/lists/ci/archive</archive>
+            <archive>http://${forgeName}/projects/${projectName.toLowerCase()}/lists/ci/archive</archive>
         </mailingList>
         <mailingList>
             <name>Developers</name>
             <post>dev@${rootArtifactId}.${forgeName}</post>
-            <archive>http://${forgeName}/projects/${rootArtifactId}/lists/dev/archive</archive>
+            <archive>http://${forgeName}/projects/${projectName.toLowerCase()}/lists/dev/archive</archive>
         </mailingList>
     </mailingLists>
 
@@ -116,6 +154,10 @@
         </repository>
     </repositories>
 
+    <!--
+        Here you declare the versions for all the modules in your project. Don't declare here the versions for 
+        external dependencies, as they should go in the "modules POM" specific <dependencyManagement>
+    -->
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -124,7 +166,7 @@
                 <version>${version}</version>
             </dependency>
 
-            <!-- TODO: DECLARE YOUR PROJECT MODULES HERE -->
+            <!-- TODO: ADD YOUR PROJECT MODULES HERE -->
         </dependencies>
     </dependencyManagement>
 
