Updated .hgignore for IntelliJ Idea projects.

--- a/archetypes/project/src/main/resources/archetype-resources/.hgignore
+++ b/archetypes/project/src/main/resources/archetype-resources/.hgignore
@@ -1,10 +1,12 @@
 target
+release\.properties
+.idea
+.*\.iml
 \.repository
 \.description
 \.classpath
 \.project
 \.settings
-release\.properties
 \.orig\..*$
 \.orig$
 \.chg\..*$
