--- a/archetypes/project/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/project/src/main/resources/archetype-resources/pom.xml
@@ -36,7 +36,8 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>superpom</artifactId>
-        <version>2.8</version>
+        <version>2.12</version> 
+        <relativePath/>
     </parent>
 
     <!-- ===============================================================================================================
