--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>superpom</artifactId>
         <version>2.12</version>
+        <relativePath/>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
@@ -20,7 +21,7 @@
     <properties>
         <tft.project.description>These Foolish Things - Miscellaneous utilities</tft.project.description>
         <tft.project.url>http://thesefoolishthings.java.net</tft.project.url>
-        
+
         <scm.repo.url>ssh://hg@bitbucket.org/tidalwave/thesefoolishthings-src</scm.repo.url>
         <scm.repo.readonly.url>https://bitbucket.org/tidalwave/thesefoolishthings-src</scm.repo.readonly.url>
         <scm.repo.browse.url>https://bitbucket.org/tidalwave/thesefoolishthings-src/src</scm.repo.browse.url>
