--- a/modules/Utilities/pom.xml
+++ b/modules/Utilities/pom.xml
@@ -77,11 +77,9 @@
                     <publicPackages>
                         <publicPackage>it.tidalwave.util</publicPackage>
                         <publicPackage>it.tidalwave.util.spi</publicPackage>
-                        <publicPackage>it.tidalwave.role</publicPackage>
-                        <publicPackage>it.tidalwave.role.ui</publicPackage>
-                        <publicPackage>it.tidalwave.role.spi</publicPackage>
-                        <publicPackage>it.tidalwave.role.annotation</publicPackage>
-                        <publicPackage>it.tidalwave.text</publicPackage>
+                        <publicPackage>it.tidalwave.util.thread</publicPackage>
+                        <publicPackage>it.tidalwave.util.thread.annotation</publicPackage>
+                        <publicPackage>it.tidalwave.util.ui</publicPackage>
                     </publicPackages>
                 </configuration>
             </plugin>
