--- a/modules/Vaadin/pom.xml
+++ b/modules/Vaadin/pom.xml
@@ -16,14 +16,14 @@
     <packaging>jar</packaging>
     <name>TheseFoolishThings - Vaadin Enhancements</name>
     <description>TheseFoolishThings - Vaadin Enhancements</description>
-   
+
     <repositories>
         <repository>
             <id>vaadin-addons</id>
             <url>http://maven.vaadin.com/vaadin-addons</url>
         </repository>
     </repositories>
- 
+
     <dependencies>
         <dependency>
             <groupId>com.vaadin</groupId>
@@ -32,6 +32,10 @@
         <dependency>
             <groupId>it.tidalwave.thesefoolishthings</groupId>
             <artifactId>it-tidalwave-util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>it.tidalwave.thesefoolishthings</groupId>
+            <artifactId>it-tidalwave-role</artifactId>
         </dependency>
 
         <!-- Needed in compilation, because of the annotation processor -->
@@ -57,5 +61,5 @@
             <version>1.1.1</version>
         </dependency>
     </dependencies>
-    
+
 </project>
