--- a/modules/examples/DciMarshalXStreamExample/pom.xml
+++ b/modules/examples/DciMarshalXStreamExample/pom.xml
@@ -29,6 +29,10 @@
         </dependency>
         <dependency>
             <groupId>it.tidalwave.thesefoolishthings</groupId>
+            <artifactId>it-tidalwave-role</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>it.tidalwave.thesefoolishthings</groupId>
             <artifactId>it-tidalwave-util</artifactId>
             <exclusions>
                 <exclusion>
@@ -43,7 +47,7 @@
             <artifactId>xstream</artifactId>
             <version>1.3.1</version> <!-- FIXME -->
         </dependency>
-                
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
@@ -82,7 +86,7 @@
             <artifactId>jcl-over-slf4j</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
-        
+
         <dependency>
             <artifactId>org-openide-util</artifactId>
             <groupId>org.netbeans.api</groupId>
